frontend/scanner-app/src/static/css/index.css
/**
 * ----------------------------------------------------------------------------
 * Custom version of socialpass-theme.css for the Scanner Application
 * ----------------------------------------------------------------------------
 */

/* General Components */

.copyright-footer {
  position: fixed;
  bottom: 0px;
  text-align: center;
  color: var(--copyright-text-color);
  opacity: 75%;
  font-size: calc(var(--base-font-size) - 0.4rem);
  padding-top: 5%;
}

/* Landing Page Components */

.landing-page-body {
  background-color: var(--home-background-color);
  color: var(--home-text-color);
  width: 100vw;
  height: 100vh;
}

.landing-page-logo {
  max-width: 100%;
  height: auto;
  max-height: 100px;
  padding: 5px;
}

.landing-page-card {
  position: relative;
  display: block;
  -webkit-font-smoothing: var(--card-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--card-moz-osx-font-smoothing);
  padding: 2.5rem;
  margin: 2.5rem;
  color: inherit;
  background-color: var(--card-background-color);
  border: solid;
  border-width: 0px;
  border-color: var(--gray-color-dim);
  border-radius: 1.4rem;
  box-shadow: none;
}


.landing-page-card-text-1 {
  font-size: 2rem;
  line-height: 1.25;
  font-family: var(--base-font-family);
  font-weight: 600;
  color: var(--card-text-highlight-color);
  -webkit-font-smoothing: var(--heading-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--heading-moz-osx-font-smoothing);
}

.landing-page-card-text-2 {
  font-size: 2rem;
  line-height: 1;
  font-family: var(--base-font-family);
  font-weight: 1.6rem;
  color: var(--card-text-color);
  -webkit-font-smoothing: var(--heading-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--heading-moz-osx-font-smoothing);
}

.landing-page-event-title {
  font-size: 2.6rem;
  line-height: 1;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  text-align: center;
  color: var(--white-color);
  -webkit-font-smoothing: var(--heading-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--heading-moz-osx-font-smoothing);

}

.btn-start-scanning {
  border-radius: 1.4rem;
  border-width: 0rem;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
  font-family: var(--base-font-family);

  font-style: normal;
  font-size: 2.4rem;
  font-weight: 500;
  line-height: 2.4;
  text-decoration: none;
  color: var(--button-text-color);
  background-color: var(--button-primary-background-color);
  border-color: none;
  box-shadow: none;
}

.btn-start-scanning:active {
  text-decoration: none;
  color: inherit;
  background-color: var(--secondary-color);
  border-color: transparent;
  box-shadow: none;
}

/* Scanner Page Components */

.btn-back {
  position: left;
  width: 40px;
  height: 40px;
  border-radius: 10px;
  padding: 8px;
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 5%;
  margin-bottom: 10%;
}

.btn-close {
  position: left;
  width: 40px;
  height: 40px;
  background: transparent;
  border-radius: 10px;
  padding: 8px;
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 5%;
  margin-bottom: 5%;
}

.scanner-title {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 100;
  font-size: 22px;
  line-height: 26px;
  text-align: left;
  color: var(--body-text-color);
  margin-top: 5%;
  margin-bottom: 5%;
}

.scanner-subtitle {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 19px;
  text-align: left;
  color: inherit;
  margin-bottom: 10px;
}

.scanner-body {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  color: var(--body-text-color);
  background-color: var(--body-background-color);
  box-shadow: none;
}

.live-statistics-btn-accepted {
  border-radius: 5px;
  border-width: 0px;
  margin-right: 5px;
  padding: 10px;
  font-size: 14px;
  font-weight: 400px;
  line-height: 18px;
  text-decoration: none;
  color: var(--button-text-color);
  background-color: var(--button-primary-background-color);
  border-color: none;
  box-shadow: none;
}

.live-statistics-btn-remaining {
  border-radius: 5px;
  border-width: 0px;
  margin-right: 5px;
  margin-left: 5px;
  padding: 10px;
  font-size: 14px;
  font-weight: 400px;
  line-height: 18px;
  text-decoration: none;
  color: var(--button-text-color);
  background-color: var(--button-secondary-background-color);
  border-color: none;
  box-shadow: none;
}

.btn-statistics {
  border-radius: 12px;
  border-width: 0rem;
  width: 80vw;
  padding: 10px;
  position: center;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
  font-family: var(--base-font-family);
  font-style: normal;
  font-size: 2rem;
  font-weight: 500;
  line-height: 24px;
  text-decoration: none;
  color: var(--button-text-color);
  background-color: var(--button-primary-background-color);
  border-color: none;
  box-shadow: none;
}

.btn-statistics:active {
  text-decoration: none;
  color: inherit;
  background-color: var(--secondary-color);
  border-color: transparent;
  box-shadow: none;
}

.statistics-body {
  position: absolute;
  display: block;
  color: inherit;
  box-shadow: none;
  background-color: var(--body-background-color);
  width: 100vw;
  height: 100vh;
}

.statistics-title {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 500;
  font-size: 22px;
  line-height: 26px;
  text-align: center;
  color: var(--body-text-color);
  margin-top: 5%;
  margin-bottom: 10%;
}

.statistics-subtitle {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  color: var(--body-text-color);
  margin-bottom: 20px;
  position: absolute;
  margin-left: -50%;
}

.statistics-table-card {
  position: relative;
  display: block;
  color: inherit;
  background-color: var(--card-background-color);
  border-color: var(--gray-color-dim);
  box-shadow: 0px 4px 15px 1px hsla(var(--primary-color-hsl), 0.21);
  border-radius: 33px 33px 0px 0px;
}

.statistics-table-container {
  position: relative;
  display: block;
  margin-bottom: 20px;
  -webkit-font-smoothing: var(--card-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--card-moz-osx-font-smoothing);
  color: inherit;
  background-color: var(--card-background-color);
  border-radius: 1.4rem;
  box-shadow: 0px 4px 15px 1px var(--card-background-color);
}

.btn-selected-statistic {
  border-radius: 12px 12px 0px 0px;
  border-width: 0rem;
  margin-top: 30px;
  width: 35%;
  padding: 16px;
  position: relative;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  text-decoration: none;
  border-color: none;
  box-shadow: none;
  color: var(--button-text-color);
}

/* Statistics Table Components */
.btn-active {
  border-color: transparent;
  margin: 2px;
  color: var(--button-text-color);
  background-color: var(--primary-color);
}

.btn-inactive {
  border-color: transparent;
  margin: 2px;
  color: var(--button-text-color);
  background-color: var(--primary-color-light);
  border-color: none;
  box-shadow: none;
}

/* Capacity Reached Components */
.landing-page-background {
  background-color: white;
  width: 100vw;
  height: 100vh;
  box-shadow: none;
}

.capacity-reached-title {
  font-size: 2.6rem;
  line-height: 1;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  color: var(--secondary-color);
  -webkit-font-smoothing: var(--heading-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--heading-moz-osx-font-smoothing);
  margin-bottom: 1.6rem;
  margin-top: 30%;
}

.capacity-reached-body {
  font-size: 2rem;
  line-height: 1.25;
  font-family: inherit;
  font-weight: 600;
  text-align: center;
  color: var(--primary-color);
  -webkit-font-smoothing: var(--heading-webkit-font-smoothing);
  -moz-osx-font-smoothing: var(--heading-moz-osx-font-smoothing);
}

.capacity-reached-footer {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  color: inherit;
  flex-grow: 1;
  box-shadow: none;
}

/* Error Pages Components */
.error-title {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 700;
  font-size: 36px;
  line-height: 26px;
  text-align: center;
  color: var(--text-color-on-primary-color-bg);
}

.error-body {
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 21px;
  text-align: center;
  color: var(--text-color-on-primary-color-bg);
}

.error-footer {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  background-color: var(--home-background-color);
  color: var(--home-text-color);
  flex-grow: 1;
  box-shadow: none;
}

.error-padding {
  margin-top: 60%;
}

/* Statistics Page Components */
.app-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 1rem;
}

table {
  background-color: var(--card-background-color);
  border-collapse: collapse;
  width: 100%;
}

th,
td {
  border: 1px solid var(--card-background-color);
  text-align: left;
  padding: 8px;
  font-size: 12px;
  color: var(--body-text-color);
}

th {
  background-color: inherit;
  color: var(--primary-color);
  font-family: var(--base-font-family);
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
}

td {
  background-color: inherit;
}

form {
  display: flex;
  gap: 5px;
}

form td:last-child {
  display: flex;
  justify-content: space-evenly;
}

form * {
  font-size: 10px;
}

